# shrimp-daemon

./: .gitignore  CMakeLists.txt  README.md  shrimp.conf
include/: agent.hpp  concurrency.hpp  config.hpp  daemon.hpp  logger.hpp  memory.hpp  metrics.hpp  network.hpp  scheduler.hpp  task.hpp
src/: agent.cpp  config.cpp  daemon.cpp  logger.cpp  main.cpp  memory.cpp  metrics.cpp  scheduler.cpp  stress_test.cpp  task.cpp
